--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ag-grid-community": "^27.3.0",
+    "ag-grid-react": "^27.3.0",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
-    "rc-table": "^7.24.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
